--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         <i class="fa-solid fa-spinner"></i>
       </div>
       <div id="suggestions">
-        <button id="viena">Viena</button>
-        <button id="copenhague">Copenhague</button>
-        <button id="zurique">Zurique</button>
-        <button id="vancouver">Vancouver</button>
-        <button id="genebra">Genebra</button>
-        <button id="frankfurt">Frankfurt</button>
+        <button id="Chernobyl">Chernobyl</button>
+        <button id="Okinawa">Okinawa</button>
+        <button id="Berlim">Berlim</button>
+        <button id="Pripyat">Pripyat</button>
+        <button id="Shibuya">Shibuya</button>
+        <button id="Sinaloa">Sinaloa</button>
         <button id="osaka">Osaka</button>
-        <button id="maceio">Maceió</button>
+        <button id="Curitiba">Curitiba</button>
       </div>
     </div>
   </body>
